# Volgrids_Plugins

./: .gitignore  README.md
chimerax_volgrid_usage/: MANIFEST.in  README.md  bundle_info.xml  chimerax_volgrids_installer.html  install.sh  install_bundled.sh  io.mc  pyproject.toml  pyproject_old.toml  setup.py  uninstall.sh
chimerax_volgrid_usage/ChimeraX_Volgrids.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
chimerax_volgrid_usage/src/: __init__.py  config_volgrids.ini  tool.py
chimerax_volgrid_usage/src/vendor_deps/MDAnalysis/analysis/encore/: cutils.c
chimerax_volgrid_usage/src/vendor_deps/MDAnalysis/analysis/encore/clustering/: affinityprop.c
chimerax_volgrid_usage/src/vendor_deps/MDAnalysis/coordinates/: timestep.cpp
chimerax_volgrid_usage/src/vendor_deps/MDAnalysis/lib/: _augment.cpp  _cutil.cpp  c_distances.c  c_distances_openmp.c  nsgrid.cpp  qcprot.c
chimerax_volgrid_usage/src/vendor_deps/MDAnalysis/lib/formats/: cython_util.c  libdcd.c  libmdaxdr.c
chimerax_volgrid_usage/src/vendor_deps/fonttools-4.63.0.dist-info/: RECORD
chimerax_volgrid_usage/src/vendor_deps/h5py-3.16.0.dist-info/: RECORD
chimerax_volgrid_usage/src/vendor_deps/mdanalysis-2.10.0.dist-info/: RECORD
chimerax_volgrid_usage/src/vendor_deps/mrcfile-1.5.4.dist-info/: RECORD
chimerax_volgrid_usage/src/vendor_deps/msgpack-1.2.1.dist-info/: RECORD
chimerax_volgrid_usage/src/vendor_deps/numpy-2.4.6.dist-info/: RECORD
chimerax_volgrid_usage/src/vendor_deps/tqdm-4.68.3.dist-info/: RECORD
(+1 files in other folders)
